--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -35,7 +35,7 @@
           <div class="mainshock">
             <h3>Mainshock</h3>
             <label for="eqid">
-              <p>Event ID (2 letters followed by 8 characters)</p>
+              <p>Event ID (2 letters followed by 5-8 characters)</p>
             </label>
             <input type="text" id="eqid" required="required"
               pattern="^[a-zA-Z]{2}[a-zA-Z0-9]{8}$" value="" />
