add foreshocks to list of tweakable params on help pane

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -132,8 +132,8 @@
                 Earthquake Archives</a></li>
             </ul>
           </li>
-          <li>Tweak the parameters for <em>Aftershocks</em> /
-            <em>Historical Seismicity</em> (optional)
+          <li>Tweak the parameters for <em>Aftershocks</em>,
+            <em>Foreshocks</em> or <em>Historical Seismicity</em> (optional)
             <p>Initial values are set automatically based on the
               mainshock&rsquo;s magnitude and estimated rupture length.</p>
           </li>
