--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -67,7 +67,7 @@
             <input type="number" id="foreshocks-dist" required="required"
               pattern="^[0-9.]+$" value="" min="1" step="1" />
             <label for="foreshocks-days">
-              <p>Max time before mainshock (days)</p>
+              <p>Max days before mainshock</p>
             </label>
             <input type="number" id="foreshocks-days" required="required"
               pattern="^[0-9.]+$" value="30" min="1" step="1" />
@@ -85,7 +85,7 @@
             <input type="number" id="historical-dist" required="required"
               pattern="^[0-9.]+$" value="" min="1" step="1" />
             <label for="historical-years">
-              <p>Max time before mainshock (years)</p>
+              <p>Max years before mainshock</p>
             </label>
             <input type="number" id="historical-years" required="required"
               pattern="^[0-9.]+$" value="10" min="1" step="1" />
