add initial (static) loading message

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -151,7 +151,9 @@
         </p>
       </div>
     </section>
-    <div id="statusBar" class="hide"></div>
+    <div id="statusBar">
+      <p class="initial">Loading&hellip;</p>
+    </div>
   </body>
   <script src="lib/leaflet/leaflet.js"></script>
   <script src="https://cdn.plot.ly/plotly-gl3d-latest.min.js"></script>
