open popups on map when eq clicked on plot, summary list

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -157,5 +157,6 @@
   </body>
   <script src="lib/leaflet/leaflet.js"></script>
   <script src="https://cdn.plot.ly/plotly-gl3d-latest.min.js"></script>
+  <script src="https://cdn.polyfill.io/v2/polyfill.js?features=Element.prototype.closest"></script>
   <script src="js/index.js"></script>
 </html>
