add "interactive" to description

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -23,8 +23,8 @@
     <section id="editPane" class="pane">
       <div class="content lighter">
         <h1>Earthquake Response App</h1>
-        <p>This web application creates a map, plots and summary for an
-          earthquake to help collect and digest information used in talking
+        <p>This web application creates a map, interactive plots and summary for
+          an earthquake to help collect and digest information used in talking
           points and scientific response. Curious? Check out the
           <a href="/response/?eqid=nc72282711">2014 Napa earthquake</a>.</p>
         <p>Enter the <em>Mainshock</em> Event ID, then select &lsquo;Map&rsquo;,
