--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -27,7 +27,7 @@
           an earthquake to help collect and digest information used in talking
           points and scientific response. Curious? Check out the
           <a href="/response/?eqid=nc72282711">2014 Napa earthquake</a>.</p>
-        <p>Enter the <em>Mainshock</em> Event ID, then select &lsquo;Map&rsquo;,
+        <p>To get started, enter the <em>Mainshock</em> Event ID, then select &lsquo;Map&rsquo;,
           &lsquo;Plots&rsquo; or &lsquo;Summary&rsquo;.</p>
       </div>
       <div class="content darker">
