--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -32,69 +32,75 @@
       </div>
       <div class="content darker">
         <form>
-          <div class="mainshock">
-            <h3>Mainshock</h3>
-            <label for="eqid">
-              <p>Event ID (2 letters followed by 5-8 characters)</p>
-            </label>
-            <input type="text" id="eqid" required="required"
-              pattern="^[a-zA-Z]{2}[a-zA-Z0-9]{5,8}$" value="" tabindex="2" />
-          </div>
-          <div class="details"></div>
-          <div class="aftershocks">
-            <h3>Aftershocks</h3>
-            <label for="aftershocks-minmag">
-              <p>Min magnitude</p>
-            </label>
-            <input type="number" id="aftershocks-minmag" required="required"
-            pattern="^[0-9.]+$" value="0" min="0" max="9" step="0.1" tabindex="3" />
-            <label for="aftershocks-dist">
-              <p>Max distance from mainshock (km)</p>
-            </label>
-            <input type="number" id="aftershocks-dist" required="required"
-              pattern="^[0-9.]+$" value="" min="1" step="1" tabindex="4" />
-          </div>
-          <div class="foreshocks">
-            <h3>Foreshocks</h3>
-            <label for="foreshocks-minmag">
-              <p>Min magnitude</p>
-            </label>
-            <input type="number" id="foreshocks-minmag" required="required"
-            pattern="^[0-9.]+$" value="1" min="0" max="9" step="0.1" tabindex="5" />
-            <label for="foreshocks-dist">
-              <p>Max distance from mainshock (km)</p>
-            </label>
-            <input type="number" id="foreshocks-dist" required="required"
-              pattern="^[0-9.]+$" value="" min="1" step="1" tabindex="6" />
-            <label for="foreshocks-days">
-              <p>Max days before mainshock</p>
-            </label>
-            <input type="number" id="foreshocks-days" required="required"
-              pattern="^[0-9.]+$" value="30" min="1" step="1" tabindex="7" />
-          </div>
-          <div class="historical">
-            <h3>Historical Seismicity</h3>
-            <label for="historical-minmag">
-              <p>Min magnitude</p>
-            </label>
-            <input type="number" id="historical-minmag" required="required"
-            pattern="^[0-9.]+$" value="" min="0" max="9" step="0.1" tabindex="8" />
-            <label for="historical-dist">
-              <p>Max distance from mainshock (km)</p>
-            </label>
-            <input type="number" id="historical-dist" required="required"
-              pattern="^[0-9.]+$" value="" min="1" step="1" tabindex="9" />
-            <label for="historical-years">
-              <p>Max years before mainshock</p>
-            </label>
-            <input type="number" id="historical-years" required="required"
-              pattern="^[0-9.]+$" value="10" min="1" step="1" tabindex="10" />
-          </div>
-          <div class="meta">
+          <fieldset>
+            <legend>Mainshock to Present</legend>
+            <div class="mainshock">
+              <h3>Mainshock</h3>
+              <label for="eqid">
+                <p>Event ID (2 letters followed by 5-8 characters)</p>
+              </label>
+              <input type="text" id="eqid" required="required"
+                pattern="^[a-zA-Z]{2}[a-zA-Z0-9]{5,8}$" value="" tabindex="2" />
+            </div>
+            <div class="details"></div>
+            <div class="aftershocks">
+              <h3>Aftershocks</h3>
+              <label for="aftershocks-minmag">
+                <p>Min magnitude</p>
+              </label>
+              <input type="number" id="aftershocks-minmag" required="required"
+              pattern="^[0-9.]+$" value="0" min="0" max="9" step="0.1" tabindex="3" />
+              <label for="aftershocks-dist">
+                <p>Max distance from mainshock (km)</p>
+              </label>
+              <input type="number" id="aftershocks-dist" required="required"
+                pattern="^[0-9.]+$" value="" min="1" step="1" tabindex="4" />
+            </div>
+          </fieldset>
+          <fieldset>
+            <legend>Before the Mainshock</legend>
+            <div class="foreshocks">
+              <h3>Foreshocks</h3>
+              <label for="foreshocks-minmag">
+                <p>Min magnitude</p>
+              </label>
+              <input type="number" id="foreshocks-minmag" required="required"
+              pattern="^[0-9.]+$" value="1" min="0" max="9" step="0.1" tabindex="5" />
+              <label for="foreshocks-dist">
+                <p>Max distance from mainshock (km)</p>
+              </label>
+              <input type="number" id="foreshocks-dist" required="required"
+                pattern="^[0-9.]+$" value="" min="1" step="1" tabindex="6" />
+              <label for="foreshocks-days">
+                <p>Max days before mainshock</p>
+              </label>
+              <input type="number" id="foreshocks-days" required="required"
+                pattern="^[0-9.]+$" value="30" min="1" step="1" tabindex="7" />
+            </div>
+            <div class="historical">
+              <h3>Historical Seismicity</h3>
+              <label for="historical-minmag">
+                <p>Min magnitude</p>
+              </label>
+              <input type="number" id="historical-minmag" required="required"
+              pattern="^[0-9.]+$" value="" min="0" max="9" step="0.1" tabindex="8" />
+              <label for="historical-dist">
+                <p>Max distance from mainshock (km)</p>
+              </label>
+              <input type="number" id="historical-dist" required="required"
+                pattern="^[0-9.]+$" value="" min="1" step="1" tabindex="9" />
+              <label for="historical-years">
+                <p>Max years before mainshock</p>
+              </label>
+              <input type="number" id="historical-years" required="required"
+                pattern="^[0-9.]+$" value="10" min="1" step="1" tabindex="10" />
+            </div>
+          </fieldset>
+          <fieldset class="buttons">
             <button type="reset" class="reset">Reset</button>
             <button type="button" class="viewmap" disabled>View Map &rarr;</button>
             <p class="required">* All fields are required</p>
-          </div>
+          </fieldset>
         </form>
       </div>
       <div class="content lighter">
