--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -27,8 +27,8 @@
           an earthquake to help collect and digest information used in talking
           points and scientific response. Curious? Check out the
           <a href="/response/?eqid=nc72282711">2014 Napa earthquake</a>.</p>
-        <p>To get started, enter the <em>Mainshock</em> Event ID, then select &lsquo;Map&rsquo;,
-          &lsquo;Plots&rsquo; or &lsquo;Summary&rsquo;.</p>
+        <p>To get started, enter the <em>Mainshock</em> Event ID, then select
+          &lsquo;Map&rsquo;, &lsquo;Plots&rsquo; or &lsquo;Summary&rsquo;.</p>
       </div>
       <div class="content darker">
         <form>
@@ -49,12 +49,14 @@
                 <p>Min magnitude</p>
               </label>
               <input type="number" id="aftershocks-minmag" required="required"
-              pattern="^[0-9.]+$" value="0" min="0" max="9" step="0.1" tabindex="3" />
+                pattern="^[0-9.]+$" value="0" min="0" max="9" step="0.1"
+                autocomplete="off" tabindex="3" />
               <label for="aftershocks-dist">
                 <p>Max distance from mainshock (km)</p>
               </label>
               <input type="number" id="aftershocks-dist" required="required"
-                pattern="^[0-9.]+$" value="" min="1" step="1" tabindex="4" />
+                pattern="^[0-9.]+$" value="" min="1" step="1"
+                autocomplete="off" tabindex="4" />
             </div>
           </fieldset>
           <fieldset>
@@ -65,17 +67,20 @@
                 <p>Min magnitude</p>
               </label>
               <input type="number" id="foreshocks-minmag" required="required"
-              pattern="^[0-9.]+$" value="1" min="0" max="9" step="0.1" tabindex="5" />
+                pattern="^[0-9.]+$" value="1" min="0" max="9" step="0.1"
+                autocomplete="off"  tabindex="5" />
               <label for="foreshocks-dist">
                 <p>Max distance from mainshock (km)</p>
               </label>
               <input type="number" id="foreshocks-dist" required="required"
-                pattern="^[0-9.]+$" value="" min="1" step="1" tabindex="6" />
+                pattern="^[0-9.]+$" value="" min="1" step="1" autocomplete="off"
+                tabindex="6" />
               <label for="foreshocks-days">
                 <p>Max days before mainshock</p>
               </label>
               <input type="number" id="foreshocks-days" required="required"
-                pattern="^[0-9.]+$" value="30" min="1" step="1" tabindex="7" />
+                pattern="^[0-9.]+$" value="30" min="1" step="1"
+                autocomplete="off" tabindex="7" />
             </div>
             <div class="historical">
               <h3>Historical Seismicity</h3>
@@ -83,22 +88,26 @@
                 <p>Min magnitude</p>
               </label>
               <input type="number" id="historical-minmag" required="required"
-              pattern="^[0-9.]+$" value="" min="0" max="9" step="0.1" tabindex="8" />
+                pattern="^[0-9.]+$" value="" min="0" max="9" step="0.1"
+                autocomplete="off" tabindex="8" />
               <label for="historical-dist">
                 <p>Max distance from mainshock (km)</p>
               </label>
               <input type="number" id="historical-dist" required="required"
-                pattern="^[0-9.]+$" value="" min="1" step="1" tabindex="9" />
+                pattern="^[0-9.]+$" value="" min="1" step="1" autocomplete="off"
+                tabindex="9" />
               <label for="historical-years">
                 <p>Max years before mainshock</p>
               </label>
               <input type="number" id="historical-years" required="required"
-                pattern="^[0-9.]+$" value="10" min="1" step="1" tabindex="10" />
+                pattern="^[0-9.]+$" value="10" min="1" step="1"
+                autocomplete="off" tabindex="10" />
             </div>
           </fieldset>
           <fieldset class="buttons">
             <button type="reset" class="reset">Reset</button>
-            <button type="button" class="viewmap" disabled>View Map &rarr;</button>
+            <button type="button" class="viewmap" tabindex="10" disabled>View
+              Map &rarr;</button>
             <p class="required">* All fields are required</p>
           </fieldset>
         </form>
