add animation for displaying mainshock details

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -42,7 +42,7 @@
               <input type="text" id="eqid" required="required"
                 pattern="^[a-zA-Z]{2}[a-zA-Z0-9]{5,8}$" value="" tabindex="2" />
             </div>
-            <div class="details"></div>
+            <div class="details hide"></div>
             <div class="aftershocks">
               <h3>Aftershocks</h3>
               <label for="aftershocks-minmag">
