hide all panes (except map) on initial load (initial map rendering more reliable if visible)

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -20,7 +20,7 @@
         <li><a href="#helpPane">Help</a></li>
       </ul>
     </header>
-    <section id="editPane" class="pane">
+    <section id="editPane" class="hide pane">
       <div class="content lighter">
         <h1>Earthquake Response App</h1>
         <p>This web application creates a map, interactive plots and summary for
@@ -122,13 +122,13 @@
     <section id="mapPane" class="pane">
       <div class="map"></div>
     </section>
-    <section id="plotsPane" class="pane">
+    <section id="plotsPane" class="hide pane">
       <div class="features"></div>
     </section>
-    <section id="summaryPane" class="pane">
+    <section id="summaryPane" class="hide pane">
       <div class="features"></div>
     </section>
-    <section id="helpPane" class="pane">
+    <section id="helpPane" class="hide pane">
       <div class="content lighter">
         <h2>Instructions</h2>
         <ol>
