--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -9,6 +9,7 @@
     <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" href="lib/leaflet/leaflet.css" />
     <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400">
   </head>
   <body>
     <header>
