set map pane to hidden by default (was set to visible as a hack to make leaflet setview more reliable)

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -120,7 +120,7 @@
         </p>
       </div>
     </section>
-    <section id="mapPane" class="pane">
+    <section id="mapPane" class="hide pane">
       <div class="map"></div>
     </section>
     <section id="plotsPane" class="hide pane">
