add css animation to loading ellipsis

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -168,7 +168,7 @@
       </div>
     </section>
     <div id="statusBar">
-      <p class="initial">Loading&hellip;</p>
+      <p class="initial">Loading<span>.</span><span>.</span><span>.</span></p>
     </div>
   </body>
   <script src="lib/leaflet/leaflet.js"></script>
