add autofocus attr to event id field

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -41,7 +41,8 @@
                 <p>Event ID (2 letters followed by 5-8 characters)</p>
               </label>
               <input type="text" id="eqid" value="" required="required"
-                pattern="^[a-zA-Z]{2}[a-zA-Z0-9]{5,8}$" tabindex="2" />
+                pattern="^[a-zA-Z]{2}[a-zA-Z0-9]{5,8}$" autofocus="autofocus"
+                tabindex="2" />
             </div>
             <div class="details hide"></div>
             <div class="aftershocks">
