--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -28,8 +28,9 @@
           an earthquake to help collect and digest information used in talking
           points and scientific response. Curious? Check out the
           <a href="/response/?eqid=nc72282711">2014 Napa earthquake</a>.</p>
-        <p>To get started, enter the <em>Mainshock</em> Event ID, then select
-          &lsquo;Map&rsquo;, &lsquo;Plots&rsquo; or &lsquo;Summary&rsquo;.</p>
+        <p>To get started, select a Mainshock from the list of Significant
+          Earthquakes, then click the &lsquo;<em class="view">View
+          Map</em>&rsquo; button.</p>
       </div>
       <div class="content darker">
         <form>
