tweak html / layout for help pane

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -135,14 +135,14 @@
       <div class="content lighter">
         <h2>Instructions</h2>
         <ol>
-          <li>Enter the <em>Mainshock</em> Event ID
+          <li><h3>Enter the <em>Mainshock</em> Event ID</h3>
             <p>Select an earthquake from &lsquo;Significant Earthquakes in the
               Past Month&rsquo; or enter an Event ID manually.</p>
             <p>You can find an Event ID in the URL of an Event Page for a
               specific earthquake. For example:</p>
               <img src="img/eventid.png" alt="image showing the URL"
                 class="eventid" />
-            <h3>Find an Earthquake</h3>
+            <h4>Find an Earthquake</h4>
             <ul class="find">
               <li><a href="https://earthquake.usgs.gov/earthquakes/map">Latest
                 Earthquakes</a></li>
@@ -150,13 +150,14 @@
                 Earthquake Archives</a></li>
             </ul>
           </li>
-          <li>Tweak the parameters for <em>Aftershocks</em>,
-            <em>Foreshocks</em> or <em>Historical Seismicity</em> (optional)
+          <li><h3>Tweak the parameters for <em>Aftershocks</em>,
+            <em>Foreshocks</em> or <em>Historical Seismicity</em> (optional)</h3>
             <p>Initial values are set automatically based on the
               mainshock&rsquo;s magnitude and estimated rupture length.</p>
           </li>
-          <li>Select the &lsquo;Map&rsquo;, &lsquo;Plots&rsquo; or
-            &lsquo;Summary&rsquo; tab</li>
+          <li><h3>Select the &lsquo;<em class="navbutton">Map</em>&rsquo;,
+            &lsquo;<em class="navbutton">Plots</em>&rsquo; or
+            &lsquo;<em class="navbutton">Summary</em>&rsquo; tab</h3></li>
         </ol>
         <h2>Contact</h2>
         <ul>
