refactor help pane css

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -134,9 +134,9 @@
     <section id="helpPane" class="hide pane">
       <div class="content lighter">
         <div class="columns">
-          <div class="column">
+          <div class="column instructions">
             <h2>Instructions</h2>
-            <ol class="instructions">
+            <ol class="iconlist">
               <li><h3>Enter the <em>Mainshock</em> Event ID</h3>
                 <p>Select an earthquake from &lsquo;Significant Earthquakes in the
                   Past Month&rsquo; or enter an Event ID manually.</p>
@@ -162,9 +162,9 @@
                 &lsquo;<em class="navbutton">Summary</em>&rsquo; tab</h3></li>
             </ol>
           </div>
-          <div class="column">
+          <div class="column legend">
             <h2>Legend</h2>
-            <ul class="legend">
+            <ul>
               <li class="mainshock">Mainshock</li>
               <li class="aftershocks">Aftershocks
                 <ul>
