add tips to help pane

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -132,7 +132,7 @@
       <div class="features"></div>
     </section>
     <section id="helpPane" class="hide pane">
-      <div class="content lighter">
+      <div class="content">
         <div class="columns">
           <div class="column instructions">
             <h2>Instructions</h2>
@@ -183,6 +183,18 @@
                 <img src="img/legend-intensity.png" alt="intensity scale" />
               </li>
             </ul>
+          </div>
+          <div class="column tips">
+            <h2>Tips</h2>
+            <ol class="iconlist">
+              <li>Click on an earthquake in the summary list or on a (2d) plot
+                to view the earthquake and additional details on the map. All
+                plots are interactive, allowing you to zoom and pan.
+              </li>
+              <li>Scroll using the left/right edges of the page when viewing
+                plots to avoid accidentally interacting with them.
+              </li>
+            </ol>
           </div>
         </div>
         <h2>Contact</h2>
