--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -24,10 +24,12 @@
     <section id="editPane" class="hide pane">
       <div class="content lighter">
         <h1>Earthquake Response App</h1>
-        <p>This web application creates a map, interactive plots and summary for
-          an earthquake to help collect and digest information used in talking
-          points and scientific response. Curious? Check out the
-          <a href="/response/?eqid=nc72282711">2014 Napa earthquake</a>.</p>
+        <p>This web application creates a map, interactive plots, and summary
+          for an earthquake using real-time, web-accessible data. It is designed
+          to be simple yet flexible, helping you visualize, analyze, and collect
+          information used in talking points and scientific response. Curious?
+          Check out the <a href="/response/?eqid=nc72282711">2014 Napa
+          earthquake</a>.</p>
         <p>To get started, select a Mainshock from the list of Significant
           Earthquakes, then click the &lsquo;<em class="view">View
           Map</em>&rsquo; button.</p>
@@ -137,10 +139,12 @@
           <div class="column instructions">
             <h2>Instructions</h2>
             <ol class="iconlist">
-              <li><h3>Enter the <em>Mainshock</em> Event ID</h3>
+              <li>
+                <h3>Select the &lsquo;<em class="navbutton">Edit</em>&rsquo;
+                  tab and Enter the <em>Mainshock</em> Event ID</h3>
                 <p>Select an earthquake from &lsquo;Significant Earthquakes in the
                   Past Month&rsquo; or enter an Event ID manually.</p>
-                <p>You can find an Event ID in the URL of an Event Page for a
+                <p>You can get an Event ID from the URL of an Event Page for a
                   specific earthquake. For example:</p>
                   <img src="img/eventid.png" alt="image showing the URL"
                     class="eventid" />
@@ -149,13 +153,16 @@
                   <li><a href="https://earthquake.usgs.gov/earthquakes/map">Latest
                     Earthquakes</a></li>
                   <li><a href="https://earthquake.usgs.gov/earthquakes/search">Search
-                    Earthquake Archives</a></li>
+                    Earthquake Catalog</a></li>
                 </ul>
               </li>
               <li><h3>Tweak the parameters for <em>Aftershocks</em>,
                 <em>Foreshocks</em> or <em>Historical Seismicity</em> (optional)</h3>
                 <p>Initial values are set automatically based on the
                   mainshock&rsquo;s magnitude and estimated rupture length.</p>
+                <p>When you customize the parameters, the URL is automatically
+                  updated to reflect the new value(s), making it easy to share
+                  / bookmark your settings.</p>
               </li>
               <li><h3>Select the &lsquo;<em class="navbutton">Map</em>&rsquo;,
                 &lsquo;<em class="navbutton">Plots</em>&rsquo; or
@@ -188,11 +195,10 @@
             <h2>Tips</h2>
             <ol class="iconlist">
               <li>Click on an earthquake in the summary list or on a (2d) plot
-                to view the earthquake and additional details on the map. All
-                plots are interactive, allowing you to zoom and pan.
+                to view the earthquake and additional details on the map.
               </li>
-              <li>Scroll using the left/right edges of the page when viewing
-                plots to avoid accidentally interacting with them.
+              <li>Scroll using the left / right edges of the page when viewing
+                plots to avoid unintentionally interacting with them.
               </li>
             </ol>
           </div>
