--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -25,8 +25,8 @@
       <div class="content lighter">
         <h1>Earthquake Response App</h1>
         <p>This web application creates a map, interactive plots, and summary
-          for an earthquake using real-time data. It helps you visualize, analyze
-          and collect information used in talking points and scientific response.
+          for an earthquake using real-time data. It helps you visualize, analyze,
+          and collect information to use in talking points and scientific response.
           Curious? Check out the <a href="/response/?eqid=nc72282711">2014 Napa
           earthquake</a>.</p>
         <p>To get started, select a Mainshock from the list of Significant
