--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -213,9 +213,11 @@
         </p>
       </div>
     </section>
-    <div id="statusBar">
-      <p class="initial">Loading<span>.</span><span>.</span><span>.</span></p>
-    </div>
+    <footer>
+      <div id="statusBar">
+        <p class="initial">Loading<span>.</span><span>.</span><span>.</span></p>
+      </div>
+    </footer>
   </body>
   <script src="lib/leaflet/leaflet.js"></script>
   <script src="https://cdn.plot.ly/plotly-gl3d-latest.min.js"></script>
