--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -143,10 +143,11 @@
                   tab and Enter the <em>Mainshock</em> Event ID</h3>
                 <p>Select an earthquake from &lsquo;Significant Earthquakes in the
                   Past Month&rsquo; or enter an Event ID manually.</p>
-                <p>You can get an Event ID from the URL of an Event Page for a
-                  specific earthquake. For example:</p>
-                  <img src="img/eventid.png" alt="image showing the URL"
-                    class="eventid" />
+                <p>You can get an Event ID from the URL of an
+                  <a href="https://earthquake.usgs.gov/earthquakes/eventpage/nc72282711">Event
+                  Page</a> for a specific earthquake. For example:</p>
+                <img src="img/eventid.png" alt="image showing the URL"
+                  class="eventid" />
                 <h4>Find an Earthquake</h4>
                 <ul class="find">
                   <li><a href="https://earthquake.usgs.gov/earthquakes/map">Latest
