set explicit bg colors

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -133,7 +133,7 @@
       <div class="features"></div>
     </section>
     <section id="helpPane" class="hide pane">
-      <div class="content">
+      <div class="content lighter">
         <div class="columns">
           <div class="column instructions">
             <h2>Instructions</h2>
