add fieldnotes icon to legend

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -184,6 +184,9 @@
               <li class="foreshocks">Foreshocks</li>
               <li class="historical">Historical Seismicity</li>
               <li class="magnitude">Magnitude</li>
+              <li class="fieldnotes">FieldNotes
+                <img src="img/pin-s-star+c0f@2x.png" alt="fieldnotes icon" />
+              </li>
               <li class="faults">Faults / Plate Boundaries</li>
               <li class="shakemap">ShakeMap Stations</li>
               <li class="intensity">Intensity
