update code in status bar so multiple error messages can be shown

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -218,7 +218,9 @@
     </section>
     <footer>
       <div id="statusBar">
-        <p class="initial">Loading<span>.</span><span>.</span><span>.</span></p>
+        <div class="initial">
+          <h4>Loading<span>.</span><span>.</span><span>.</span></h4>
+        </div>
       </div>
     </footer>
   </body>
