--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -21,7 +21,7 @@
       </ul>
     </header>
     <section id="editPane" class="hide pane">
-      <div class="content lighter">
+      <div class="content">
         <h1>Earthquake Response App</h1>
         <p>This web application creates a map, interactive plots, and summary
           for an earthquake using real-time data. It helps you visualize, analyze,
@@ -115,7 +115,7 @@
           </fieldset>
         </form>
       </div>
-      <div class="content lighter">
+      <div class="content">
         <p class="comcat">Earthquake data is from ComCat:
           <a href="https://earthquake.usgs.gov/data/comcat/data-availability.php">
             ComCat Documentation - Data Availability</a>.
@@ -132,7 +132,7 @@
       <div class="features"></div>
     </section>
     <section id="helpPane" class="hide pane">
-      <div class="content lighter">
+      <div class="content">
         <div class="columns">
           <div class="column instructions">
             <h2>Instructions</h2>
