simplify comcat link

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -116,9 +116,8 @@
         </form>
       </div>
       <div class="content">
-        <p class="comcat">Earthquake data is from ComCat:
-          <a href="https://earthquake.usgs.gov/data/comcat/data-availability.php">
-            ComCat Documentation - Data Availability</a>.
+        <p class="comcat">Earthquake data is from
+          <a href="https://earthquake.usgs.gov/data/comcat/data-availability.php">ComCat</a>.
         </p>
       </div>
     </section>
