--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -138,14 +138,9 @@
             <ol class="iconlist">
               <li>
                 <h3>Select the &lsquo;<em class="navbutton">Edit</em>&rsquo;
-                  tab and Enter the <em>Mainshock</em> Event ID</h3>
-                <p>Select an earthquake from &lsquo;Significant Earthquakes in the
-                  Past Month&rsquo; or enter an Event ID manually.</p>
-                <p>You can get an Event ID from the URL of an
-                  <a href="https://earthquake.usgs.gov/earthquakes/eventpage/nc72282711">Event
-                  Page</a> for a specific earthquake. For example:</p>
-                <img src="img/eventid.png" alt="image showing the URL"
-                  class="eventid" />
+                  tab and enter the <em>Mainshock</em> Event ID</h3>
+                <p>Select an earthquake from &lsquo;Significant Earthquakes in
+                  the Past Month&rsquo; or enter an Event ID manually.</p>
                 <h4>Find an Earthquake</h4>
                 <ul class="find">
                   <li><a href="https://earthquake.usgs.gov/earthquakes/map">Latest
@@ -153,18 +148,27 @@
                   <li><a href="https://earthquake.usgs.gov/earthquakes/search">Search
                     Earthquake Catalog</a></li>
                 </ul>
+                <p>You can get the Event ID from the <acronym title="Uniform Resource Locator (web address)">URL</acronym>
+                  of an <a href="https://earthquake.usgs.gov/earthquakes/eventpage/nc72282711">Event
+                  Page</a> for a specific earthquake. For example:</p>
+                <img src="img/eventid.png" alt="image showing the URL"
+                  class="eventid" />
               </li>
-              <li><h3>Tweak the parameters for <em>Aftershocks</em>,
-                <em>Foreshocks</em> or <em>Historical Seismicity</em> (optional)</h3>
-                <p>Initial values are set automatically based on the
+              <li>
+                <h3>Tweak the parameters for <em>Aftershocks</em>,
+                  <em>Foreshocks</em> or <em>Historical Seismicity</em>
+                  (optional)</h3>
+                <p>Initial parameter values are set automatically based on the
                   mainshock&rsquo;s magnitude and estimated rupture length.</p>
                 <p>When you customize the parameters, the URL is automatically
                   updated to reflect the new value(s), making it easy to share
-                  / bookmark your settings.</p>
+                  or bookmark your settings.</p>
               </li>
-              <li><h3>Select the &lsquo;<em class="navbutton">Map</em>&rsquo;,
-                &lsquo;<em class="navbutton">Plots</em>&rsquo; or
-                &lsquo;<em class="navbutton">Summary</em>&rsquo; tab</h3></li>
+              <li>
+                <h3>Select the &lsquo;<em class="navbutton">Map</em>&rsquo;,
+                  &lsquo;<em class="navbutton">Plots</em>&rsquo; or
+                  &lsquo;<em class="navbutton">Summary</em>&rsquo; tab</h3>
+              </li>
             </ol>
           </div>
           <div class="column legend">
@@ -204,7 +208,7 @@
             </ol>
           </div>
         </div>
-        <h2>Contact</h2>
+        <h2>Contacts</h2>
         <ul>
           <li><a href="mailto:shaefner@usgs.gov">Scott Haefner</a></li>
           <li><a href="mailto:baagaard@usgs.gov">Brad Aagaard</a></li>
