Remember focused field on edit pane

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -42,8 +42,7 @@
                 <p>Event ID (typically 2 letters followed by 8-10 characters)</p>
               </label>
               <input type="text" id="eqid" value="" required="required"
-                pattern="^[^/\\:]+$" autofocus="autofocus"
-                tabindex="2" />
+                pattern="^[^/\\:]+$" tabindex="2" />
             </div>
             <div class="details hide"></div>
             <div class="aftershocks">
