add note about panning 3d plots

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -213,7 +213,8 @@
                 to view the earthquake and additional details on the map.
               </li>
               <li>Scroll using the left / right edges of the page when viewing
-                plots to avoid unintentionally interacting with them.
+                plots to avoid unintentionally interacting with them. Use the
+                &lsquo;control&rsquo; key to pan a 3d plot.
               </li>
             </ol>
           </div>
