clean up display of instructions on help pane

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -148,7 +148,7 @@
             <ol class="iconlist">
               <li>
                 <h3>Select the &lsquo;<em class="navbutton">Edit</em>&rsquo;
-                  tab and enter the <em>Mainshock</em> Event ID</h3>
+                  tab and enter the <strong>Mainshock</strong> Event ID</h3>
                 <p>Select an earthquake from &lsquo;Significant Earthquakes in
                   the Past Month&rsquo; or enter an Event ID manually.</p>
                 <h4>Find an Earthquake</h4>
@@ -158,16 +158,17 @@
                   <li><a href="https://earthquake.usgs.gov/earthquakes/search">Search
                     Earthquake Catalog</a></li>
                 </ul>
-                <p>You can get the Event ID from the <acronym title="Uniform Resource Locator (web address)">URL</acronym>
-                  of an <a href="https://earthquake.usgs.gov/earthquakes/eventpage/nc72282711">Event
+                <p>You can get the Event ID from the <acronym title="Uniform
+                  Resource Locator (web address)">URL</acronym> of an
+                  <a href="https://earthquake.usgs.gov/earthquakes/eventpage/nc72282711">Event
                   Page</a> for a specific earthquake. For example:</p>
                 <img src="img/eventid.png" alt="image showing the URL"
                   class="eventid" />
               </li>
               <li>
-                <h3>Tweak the parameters for <em>Aftershocks</em>,
-                  <em>Foreshocks</em> or <em>Historical Seismicity</em>
-                  (optional)</h3>
+                <h3>Tweak the parameters for <strong>Aftershocks</strong>,
+                  <strong>Foreshocks</strong> or <strong>Historical
+                    Seismicity</strong> (optional)</h3>
                 <p>Initial parameter values are set automatically based on the
                   mainshock&rsquo;s magnitude and estimated rupture length.</p>
                 <p>When you customize the parameters, the URL is automatically
