do not wrap title attr text b/c it inserts line break in tooltip

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -158,8 +158,8 @@
                   <li><a href="https://earthquake.usgs.gov/earthquakes/search">Search
                     Earthquake Catalog</a></li>
                 </ul>
-                <p>You can get the Event ID from the <acronym title="Uniform
-                  Resource Locator (web address)">URL</acronym> of an
+                <p>You can get the Event ID from the <acronym
+                  title="Uniform Resource Locator (web address)">URL</acronym> of an
                   <a href="https://earthquake.usgs.gov/earthquakes/eventpage/nc72282711">Event
                   Page</a> for a specific earthquake. For example:</p>
                 <img src="img/eventid.png" alt="image showing the URL"
