--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -240,7 +240,7 @@
     </footer>
   </body>
   <script src="lib/leaflet/leaflet.js"></script>
-  <script src="https://cdn.plot.ly/plotly-gl3d-latest.min.js"></script>
+  <script src="lib/plotly/plotly-gl3d.js"></script>
   <script src="https://cdn.polyfill.io/v2/polyfill.js?features=Element.prototype.closest"></script>
   <script src="js/index.js"></script>
 </html>
