various validation tweaks

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -158,8 +158,8 @@
                   <li><a href="https://earthquake.usgs.gov/earthquakes/search">Search
                     Earthquake Catalog</a></li>
                 </ul>
-                <p>You can get the Event ID from the <acronym
-                  title="Uniform Resource Locator (web address)">URL</acronym> of an
+                <p>You can get the Event ID from the <abbr
+                  title="Uniform Resource Locator (web address)">URL</abbr> of an
                   <a href="https://earthquake.usgs.gov/earthquakes/eventpage/nc72282711">Event
                   Page</a> for a specific earthquake. For example:</p>
                 <img src="img/eventid.png" alt="image showing the URL"
@@ -238,9 +238,9 @@
         </div>
       </div>
     </footer>
+    <script src="lib/leaflet/leaflet.js"></script>
+    <script src="lib/plotly/plotly-gl3d.js"></script>
+    <script src="https://cdn.polyfill.io/v2/polyfill.js?features=Element.prototype.closest"></script>
+    <script src="js/index.js"></script>
   </body>
-  <script src="lib/leaflet/leaflet.js"></script>
-  <script src="lib/plotly/plotly-gl3d.js"></script>
-  <script src="https://cdn.polyfill.io/v2/polyfill.js?features=Element.prototype.closest"></script>
-  <script src="js/index.js"></script>
 </html>
