update for compatibility w/ css

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -38,7 +38,7 @@
             <legend>Mainshock to Present</legend>
             <div class="mainshock">
               <h3>Mainshock
-                <div class="hide spinner"></div>
+                <div class="hide breather"></div>
               </h3>
               <label for="eqid">
                 <p>Event ID (typically 2 letters followed by 8-10 characters)</p>
@@ -49,7 +49,7 @@
             <div class="hide details"></div>
             <div class="aftershocks">
               <h3>Aftershocks
-                <div class="hide spinner"></div>
+                <div class="hide breather"></div>
                 <span class="hide count"></span>
               </h3>
               <label for="as-mag">
@@ -70,7 +70,7 @@
             <legend>Before the Mainshock</legend>
             <div class="foreshocks">
               <h3>Foreshocks
-                <div class="hide spinner"></div>
+                <div class="hide breather"></div>
                 <span class="hide count"></span>
               </h3>
               <label for="fs-mag">
@@ -94,7 +94,7 @@
             </div>
             <div class="historical">
               <h3>Historical Seismicity
-                <div class="hide spinner"></div>
+                <div class="hide breather"></div>
                 <span class="hide count"></span>
               </h3>
               <label for="hs-mag">
@@ -234,7 +234,7 @@
     <footer>
       <div id="statusBar">
         <div class="initial">
-          <h4>Loading<span>.</span><span>.</span><span>.</span></h4>
+          <h4>Loading<span class="ellipsis"><span>.</span><span>.</span><span>.</span></span></h4>
         </div>
       </div>
     </footer>
