--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -29,8 +29,7 @@
           Curious? Check out the <a href="./?eqid=nc72282711">2014 Napa
           earthquake</a>.</p>
         <p>To get started, select a Mainshock from the list of Significant
-          Earthquakes, then click the &lsquo;<em class="view">View
-          Map</em>&rsquo; button.</p>
+          Earthquakes or enter an Event ID manually.</p>
       </div>
       <div class="content darker">
         <form>
