--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -237,6 +237,7 @@
     </footer>
     <script src="lib/leaflet/leaflet.js"></script>
     <script src="lib/plotly/plotly-gl3d.js"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=AbortController"></script>
     <script src="js/index.js"></script>
   </body>
 </html>
